--- a/hosts.json5
+++ b/hosts.json5
@@ -1,5 +1,6 @@
 {
   game_host: 'http://gfjp-game.sunborngame.com/index.php/1001',
   cdn_host: 'http://gfjp-cdn.sunborngame.com',
-  asset_host: 'http://gfjp-cdn.sunborngame.com'
+  asset_host: 'http://gfjp-cdn.sunborngame.com',
+  channel: 'jp_mica'
 }
