--- a/hosts.json5
+++ b/hosts.json5
@@ -2,5 +2,6 @@
   game_host: 'http://gfjp-game.sunborngame.com/index.php/1001',
   cdn_host: 'http://gfjp-cdn.sunborngame.com',
   asset_host: 'http://gfjp-cdn.sunborngame.com',
+  transit_host: 'http://gfjp-transit.sunborngame.com/index.php',
   channel: 'jp_mica'
 }
